<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style='"?android:attr/buttonBarButtonStyle"'
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginEnd="5dp"
    android:layout_marginRight="5dp"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/Output1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:textColor="#5C5C5C"
            android:textSize="36sp"></TextView>

        <TextView
            android:id="@+id/Output2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:textColor="#020202"
            android:textSize="48sp"></TextView>

        <TableRow>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/pow"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/sqrt"
                android:textAllCaps="false"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/abs"
                android:textAllCaps="false"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:onClick="ButtonClicked"
                android:text="@string/ln"
                android:textAllCaps="false"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>
        </TableRow>

        <TableRow>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/sin"
                android:textAllCaps="false"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/cos"
                android:textAllCaps="false"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/tg"
                android:textAllCaps="false"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:onClick="ButtonClicked"
                android:text="@string/ctg"
                android:textAllCaps="false"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>
        </TableRow>

        <TableRow>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/pi"
                android:textAllCaps="false"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/e"
                android:textAllCaps="false"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/i"
                android:textAllCaps="false"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:onClick="ButtonGCDClicked"
                android:text="@string/gcd"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#ACACAC"></Button>
        </TableRow>

        <TableRow>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/firstButton"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#EAD7ED"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/secondButton"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#EAD7ED"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClearClicked"
                android:text="@string/c"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#EAD7ED"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:onClick="ButtonDeleteSymbolClicked"
                android:text="@string/delete"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#EAD7ED"></Button>
        </TableRow>

        <TableRow>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/_1"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/_2"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/_3"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:onClick="ButtonClicked"
                android:text="@string/divide"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#EAD7ED"></Button>
        </TableRow>

        <TableRow>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/_4"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/_5"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/_6"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:onClick="ButtonClicked"
                android:text="@string/multiply"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#EAD7ED"></Button>
        </TableRow>

        <TableRow>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/_7"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/_8"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/_9"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:onClick="ButtonClicked"
                android:text="@string/subtract"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#EAD7ED"></Button>
        </TableRow>

        <TableRow>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/dot"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonClicked"
                android:text="@string/_0"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#CDA9D3"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:onClick="ButtonCalculateClicked"
                android:text="@string/equal"
                android:textColor="#F9F3FA"
                android:textSize="18sp"
                app:backgroundTint="#9D72A5"></Button>

            <Button
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:onClick="ButtonClicked"
                android:text="@string/add"
                android:textColor="#471150"
                android:textSize="18sp"
                app:backgroundTint="#EAD7ED"></Button>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>